# Stack

./: .travis.yml  CMakeLists.txt  README.md
include/: Zadanie.h  Zadanie1.h  Zadanie2.h  stack.h  stack.hpp
sources/: main.cpp  stack.cpp
